Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Silen.GitHub.com by silen</title>
+    <title>Silen by silen</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Silen.GitHub.com</h1>
+        <h1>Silen</h1>
         <h2></h2>
         <a href="https://github.com/silen" class="button"><small>Follow me on</small> GitHub</a>
       </div>
