--- a/open-source.html
+++ b/open-source.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: 开源项目
-keywords: 开源,open-source,GitHub,php,overtrue,开源项目
+keywords: 开源,open-source,GitHub,php,开源项目
 description: 开源改变世界。我是一个热衷于开源的人，也多多少于参与与创建了一些开源项目，希望在开源这条路上能做出更大更多的贡献。
 menu: Open-Source
 ---
@@ -37,44 +37,6 @@ menu: Open-Source
 <script src="/assets/js/underscore-min.js"></script>
 <script>
     $(document).ready(function(){
-        var repoListWrap = $('.repo-list');
-        var repoList = $('<ul class="collection-listing clearfix"></ul>');
-        var repoCount = 0;
 
-        $.get('https://api.github.com/users/overtrue/repos?type=owner',
-          function(repos){
-            if (!repos) {
-              repoListWrap.html('<div class="blankslate"><h3>加载失败</h3><p>请刷新或稍后再试...</p></div>');
-            };
-
-            repos = _.sortBy(repos, function(repo){
-                return - (repo.stargazers_count + repo.forks_count + repo.watchers_count);
-            });
-
-            repos.forEach(function(repo){
-                if (repo.fork) return;
-                repoCount++;
-
-                var date = new Date(repo.updated_at);
-
-                // repo.updated_at = date.getFullYear() + '-' + (date.getMonth() + 1) + '-' + date.getDay() + ' ' + date.getHours() + ':' + date.getMinutes();
-                repo.updated_at = date.getFullYear() + '-' + (date.getMonth() + 1) + '-' + date.getDay();
-                repo.language = repo.language || 'unknown';
-
-                var repoTemplate = $('#repo-template').html();
-                var item = repoTemplate.replace(/\[(.*?)\]/g, function(){
-                    return eval(arguments[1]);
-                });
-
-                repoList.append(item);
-            });
-
-            repoListWrap.html(repoList);
-            $('.repo-count').html(repoCount);
-
-            $('.geopattern').each(function(){
-              $(this).geopattern($(this).data('pattern-id'));
-            });
-        });
     });
 </script>
